# play

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  bootstrap.sh  configure  configure.ac
src/: .gitignore  Makefile.am  Makefile.in  config.h.in  marshal.c  marshal.h  marshal.list  play  play-common.h  play-downloader.c  play-downloader.h  play-gstreamer.c  play-gstreamer.h  play-playlist.c  play-playlist.h  play-queue-item.c  play-queue-item.h  play-queue.c  play-queue.h  play-simple-queue.c  play-simple-queue.h  play-terminal.c  play-terminal.h  play.c
